<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <RelativeLayout
            android:paddingTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/addcancel"
                android:layout_alignParentStart="true"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:textColor="#58d154"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:id="@+id/newcontack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/contackdialog"
                android:textColor="#000000"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/addcomplete"
                android:layout_alignParentEnd="true"
                android:textSize="18sp"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:textColor="#58d154"
                android:text="@string/complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />




        </RelativeLayout>



        <LinearLayout
            android:paddingTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <EditText
                android:id="@+id/name_edittext"
                android:hint="@string/contackname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minWidth="500dp" />

        </LinearLayout>

        <LinearLayout

            android:paddingBottom="20dp"
            android:background="#ffff"
            android:paddingTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">




            <EditText
                android:id="@+id/num_edittext"
                android:hint="@string/contacknum"
                android:minWidth="500dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:digits="1234567890" />


        </LinearLayout>


    </LinearLayout>


</LinearLayout>