<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/bottom_layout"
    android:background="#ffff"
    android:paddingTop="4dp">

    <RelativeLayout

        android:id="@+id/msg_btn"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/msgimg"
            android:src="@drawable/ic_action_msg"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/msgimg"
            android:text="@string/message"/>

    </RelativeLayout>

    <!--<RelativeLayout-->
        <!--android:id="@+id/ding_btn"-->
        <!--android:layout_weight="1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerInParent="true">-->

        <!--<ImageView-->
            <!--android:id="@+id/dingimg"-->
            <!--android:src="@drawable/ic_action_ding"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content" />-->
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true"-->
            <!--android:layout_below="@id/dingimg"-->
            <!--android:text="@string/ding"/>-->

    <!--</RelativeLayout>-->

    <RelativeLayout
        android:id="@+id/contack_btn"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/contackimg"
            android:src="@drawable/ic_action_contack"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/contackimg"
            android:text="@string/contacts"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/work_btn"

        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/workimg"

            android:src="@drawable/ic_action_work"

            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/workimg"

            android:text="@string/app"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mine_btn"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/mineimg"
            android:src="@drawable/ic_action_mine"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/mineimg"
            android:text="@string/mine"/>

    </RelativeLayout>

</LinearLayout>