<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.35"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.04"
        android:background="@drawable/password_shape"
        android:orientation="horizontal">

        <ImageView
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:src="@drawable/ic_action_user" />

        <EditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/please_input_username"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="10dp"
        android:layout_weight="0.04"
        android:background="@drawable/password_shape"
        android:orientation="horizontal">

        <ImageView
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:src="@drawable/ic_action_password" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@null"
            android:hint="@string/please_input_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="17sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="30dp"
        android:layout_weight="0.04"
        android:background="@drawable/complete_button"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center"
            android:text="@string/login2"
            android:textColor="#ffffff"
            android:textSize="17sp" />

    </LinearLayout>

</LinearLayout>