<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:paddingBottom="10dp">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/mine"
            android:textSize="20sp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.03"
        android:background="#F0F4F7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.9"
        android:background="#F0F4F7"
        android:orientation="vertical">


        <!--111-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.22"
            android:background="#ffff"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <ImageView
                android:paddingLeft="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"

                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/ic_action_ding" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:layout_weight="0.6"
                android:background="#ffff"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <RelativeLayout
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">


                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/username"
                        android:textSize="25sp" />


                    <ImageView

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"

                        android:src="@drawable/ic_action_right" />

                </RelativeLayout>


                <RelativeLayout

                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <TextView

                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:text="@string/login"
                        android:textSize="18sp" />


                    <TextView
                        android:layout_centerInParent="true"
                        android:id="@+id/text111"
                        android:paddingEnd="90dp"
                        android:layout_alignParentEnd="true"
                        android:textSize="18sp"
                        android:text="@string/day"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <TextView
                        android:textColor="#000000"
                        android:layout_toLeftOf="@id/text111"
                        android:text="5"
                        android:paddingRight="10dp"
                        android:textSize="18sp"
                        android:id="@+id/login_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />




                </RelativeLayout>



            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="#F0F4F7" />
        <!--222-->
        <RelativeLayout
            android:id="@+id/weCommunity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="#ffff"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:id="@+id/weCommunity_img"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/ic_action_comm" />

            <TextView
                android:id="@+id/weCommunity_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/weCommunity_img"
                android:gravity="center"
                android:text="@string/community"
                android:textSize="17sp" />

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"

                android:src="@drawable/ic_action_right" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="#F0F4F7" />
        <!--333-->
        <RelativeLayout
            android:id="@+id/myCollect"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="#ffff"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/myCollect_img"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/ic_action_collect" />

            <TextView
                android:id="@+id/myCollect_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/myCollect_img"
                android:gravity="center"
                android:text="@string/collect"
                android:textSize="17sp" />

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"

                android:src="@drawable/ic_action_right" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="#F0F4F7" />
        <!--444-->
        <RelativeLayout
            android:id="@+id/schedule"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="#ffff">

            <ImageView
                android:id="@+id/schedule_img"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/ic_action_schedule" />

            <TextView
                android:id="@+id/schedule_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/schedule_img"
                android:gravity="center"
                android:text="@string/schedule"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"

                android:src="@drawable/ic_action_right" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"
            android:background="#F0F4F7" />
        <!--555-->
        <RelativeLayout
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:background="#ffff">

            <ImageView
                android:id="@+id/setting_img"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:src="@drawable/ic_action_setting" />

            <TextView
                android:layout_toEndOf="@id/setting_img"
                android:id="@+id/setting_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/setting"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"

                android:src="@drawable/ic_action_right" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4">


        </LinearLayout>


    </LinearLayout>

</LinearLayout>

